--- a/completeInfo.html
+++ b/completeInfo.html
@@ -7,18 +7,19 @@
     <meta name="language" content="fa">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="Content/bootstrap.min.css" rel="stylesheet" />
+<!--    <link href="Content/bootstrap.min.css" rel="stylesheet" />-->
     <link href="Content/css/bootstrap-rtl.css" rel="stylesheet" />
     <link href="Content/css/w3.css" rel="stylesheet" />
     <link href="ParsaFont/Style.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="Scripts/jquery-3.2.1.min.js"></script>
     <script src="Scripts/ckeditor/ckeditor.js"></script>
     <script src="Scripts/bootstrap-rtl.js"></script>
     <script src="Scripts/jquery.validate.min.js"></script>
     <script src="Scripts/jquery.validate.unobtrusive.min.js"></script>
     <meta name="viewport" content="width=device-width" />
+
     <title>@ViewBag.Title</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
 </head>
 <body style="background-color:#E5E5E5">
@@ -140,6 +141,9 @@
                 <a href="ShowDiscount.html" class="rightMenuColor"><span class="glyphicon glyphicon-usd" style="color:#7B8084"></span>&nbsp;&nbsp; تخفیف های من </a>
             </div><br />
             <div class="rightMenuColor">
+                <a href="support.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone" style="color:#7B8084"></span>&nbsp;&nbsp; تبلیغات </a>
+            </div><br />
+            <div class="rightMenuColor">
                 <a href="support.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone" style="color:#7B8084"></span>&nbsp;&nbsp; پشنیبانی </a>
             </div><br />
             <div class="rightMenuColor">
@@ -164,18 +168,28 @@
 
                     <div class="form-group">
                         <div class="col-md-11">
-                            <input type="emai" required autofocus name="email" value=""
+                            <input type="email" required autofocus name="email" value=""
                                    class="form-control w3-margin"
                                    id="signUp-complete-info-form-email-inp"
                                    accept="application/txt" disabled />
-                            <label> ایمیل</label>
+<!--                            <label> ایمیل</label>-->
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-11">
+                            <input type="password" required autofocus name="email" value=""
+                                   class="form-control w3-margin"
+                                   id="signUp-complete-info-form-password-inp"
+                                   accept="application/txt" disabled />
+                            <!--                            <label> رمز ورود</label>-->
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-md-11">
                              <input type="username" required autofocus name="username" value=""
-                                                class="form-control w3-margin w3-trasparent"
+                                                class="form-control w3-margin"
                                                 id="signUp-complete-info-form-username-inp"
                                                 accept="application/txt" />
                              <label>نام کاربری</label>
@@ -184,7 +198,7 @@
 
                     <div class="form-group">
                         <div class="col-md-11">
-                            <input type="text" required autofocus name="first-name" value=""
+                            <input type="text" required autofocus name="firstName" value=""
                                    class="form-control w3-margin"
                                    id="signUp-complete-info-form-first-name-inp"
                                    accept="application/txt" />
@@ -194,7 +208,7 @@
 
                     <div class="form-group">
                         <div class="col-md-11">
-                            <input type="text" required autofocus name="last-name" value=""
+                            <input type="text" required autofocus name="lastName" value=""
                                    class="form-control w3-margin"
                                    id="signUp-complete-info-form-last-name-inp"
                                    accept="application/txt" />
@@ -204,7 +218,23 @@
 
                     <div class="form-group">
                         <div class="col-md-11">
-                             <input type="tel" required autofocus name="phone-number" value=""
+                            <select class="form-control w3-margin w3-trasparent" name="gender"
+                                    id="signUp-complete-info-form-gender-inp"
+                                    style="height:40px;background-color:#F2F2F2 !important" required>
+                                <option class="placeholder" selected disabled hidden value="" >جنسیت</option>
+                                <!--distance in another way-->
+                                <option value="" disabled ></option>
+                                <option value="female">زن</option>
+                                <option value="male">مرد</option>
+                                <option value="other">سایر</option>
+                                <option value="" disabled ></option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-11">
+                             <input type="tel" required autofocus name="phoneNumber" value=""
                                                 class="form-control w3-margin"
                                                 id="signUp-complete-info-form-phone-number-inp"
                                                 accept="application/txt" />
@@ -227,42 +257,17 @@
                             <select class="form-control w3-margin w3-trasparent" name="city"
                                     id="signUp-complete-info-form-city-inp"
                                     style="height:40px ; background-color:#F2F2F2" required>
-                                <option value=""> شهر مورد نظر را انتخاب کنید</option>
+                                <option class="placeholder" selected disabled hidden value="" >شهر</option>
+                                <option value="" disabled ></option>
                                 <!--need a for to read city names from db-->
-                                <option value="@cityID1">@cityName1</option>
-                                <option value="@cityID2">@cityName2</option>
-                                <option value="@cotyID3">@cityName3</option>
-                            </select>
-                        </div>
-                    </div>
-
-<!--                    <div class="form-group">-->
-<!--                        <div class="col-md-11">-->
-<!--                            <input type="" required autofocus name="Password" value="" -->
-<!--                                   class="form-control w3-margin" -->
-<!--                                   id="editProfile-form-city-inp"-->
-<!--                                   accept="application/txt" />-->
-<!--                            <label> شهر</label>-->
-<!--                        </div>-->
-<!--                    </div>-->
-                    <div class="form-group">
-                        <div class="col-md-11"> 
-         
-                            <select class="form-control w3-margin w3-trasparent" name="gender"
-                                    id="signUp-complete-info-form-gender-inp"
-                                    style="height:40px;background-color:#F2F2F2 !important" required>
-                                <option value="">جنسیت انتخاب کنید</option>
-                                <!--need a for to read shop types from db-->
-                                <option value="female">زن</option>
-                                <option value="male">مرد</option>
-                                <option value="other">سایر</option>
+                                <option value="" id="signUp-complete-info-form-city-lastOp-op" disabled ></option>
                             </select>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-md-11" style="color:#7B8084 !important">
-                             <input type="file" required autofocus name="ImageSrc" value=""
+                             <input type="file" required autofocus name="Image" value=""
                                                 id="signUp-complete-info-form-image-inp"
                                                 class="form-control w3-margin" accept="image/*" />
                              <label class="pictureInput">تصویر آواتار</label>
@@ -311,45 +316,76 @@
     <script>
 
         $(document).ready( function () {
+
+            const signUp_complete_info_form_var = document.getElementById("signUp-complete-info-form");
+            signUp_complete_info_form_var.email.value=window.sessionStorage.email;
+
+            $.get("address.txt", function (data) {
+                const my_address = data + "cities/";
+                $.ajax({
+                    type: 'GET',
+                    // dataType: 'json',
+                    // contentType: 'application/json',
+                    url: my_address,
+                    // data: signUp_complete_info_json,
+                    success: function(resultData, status, xhr){
+                        alert(resultData.message);
+                        if (resultData.result.toString() === "true") {
+                            for (let val of (resultData.cities)) {
+                                const op = document.createElement("option");
+                                const opText = document.createTextNode(val.name);
+                                const lastOp = document.getElementById("signUp-complete-info-form-city-lastOp-op");
+                                op.value = val.id;
+                                op.appendChild(opText);
+                                signUp_complete_info_form_var.city.insertBefore(op,lastOp);
+                            }
+                        }
+                    },
+                    error: function () {
+                        alert(" اتصال به اینترنت برقرار نیست. ");}
+                })
+            });
+
+
             $("#signUp-complete-info-form").submit(function (e) {
                 e.preventDefault();
 
-                const signUp_complete_info_form_var = document.getElementById("signUp-complete-info-form");
                 // const password_var = signUp_complete_info_form_var.password.value;
 
 
                 const username_var = signUp_complete_info_form_var.username.value;
-                const  firstName_var = signUp_complete_info_form_var.firstName.value;
-                const  lastName_var = signUp_complete_info_form_var.lastName.value;
+                // const  firstName_var = signUp_complete_info_form_var.firstName.value;
+                // const  lastName_var = signUp_complete_info_form_var.lastName.value;
                 const  phoneNumber_var = signUp_complete_info_form_var.phoneNumber.value;
                 const  email_var = signUp_complete_info_form_var.email.value;
                 const  address_var = signUp_complete_info_form_var.address.value;
-                const  city_var = signUp_complete_info_form_var.city.value;
-                const  gender_var = signUp_complete_info_form_var.gender.value;
+                // const  city_var = signUp_complete_info_form_var.city.value;
+                // const  gender_var = signUp_complete_info_form_var.gender.value;
                 //const  image_var = signUp_complete_info_form_var.image.value;
 
 
                 if (username_var.length >= 5 ) {
                     const signUp_complete_info_obj = {
                         username: username_var,
-                        first_name: firstName_var,
-                        last_name: lastName_var,
+                        password: "12345",
+                        // first_name: firstName_var,
+                        // last_name: lastName_var,
                         phone_number: phoneNumber_var,
                         email: email_var,
-                        address: address_var,
-                        city: city_var,
-                        gender: gender_var
+                        // address: address_var,
+                        // city: city_var,
+                        // gender: gender_var
                         //image
                     };
+
                     const signUp_complete_info_json = JSON.stringify(signUp_complete_info_obj);
 
-                    $.post("address.txt", function (data) {
+                    $.get("address.txt", function (data) {
                         const my_address = data + "signup-salesman/complete-info/";
-
                         $.ajax({
                             type: 'POST',
-                            dataType: 'json',
-                            contentType: 'application/json',
+                            // dataType: 'json',
+                            // contentType: 'application/json',
                             url: my_address,
                             data: signUp_complete_info_json,
                             success: function(resultData, status, xhr){
